--- a/BookPoolV2/Views/Account/MyProfile.cshtml
+++ b/BookPoolV2/Views/Account/MyProfile.cshtml
@@ -20,21 +20,21 @@
 
 <div class="row container">
     <div class="col s12">
-        <div class="input-field col s6" style="padding-left:10px!important;">
+        <div class="input-field col s12 m6" style="padding-left:10px!important;">
             <input id="firstName" type="text" class="validate" value="@Model.FirstName">
-            <label for="first_name">First Name</label>
+            <label for="firstName">First Name</label>
         </div>
-        <div class="input-field col s6" style="padding-left:10px!important;">
+        <div class="input-field col s12 m6" style="padding-left:10px!important;">
             <input id="lastName" type="text" class="validate" value="@Model.LastName">
-            <label for="last_name">Last Name</label>
+            <label for="lastName">Last Name</label>
         </div>
     </div>
     <div class="col s12">
-        <div class="input-field col s6" style="padding-left:10px!important;">
+        <div class="input-field col s12 m6" style="padding-left:10px!important;">
             <input id="emailAddress" type="text" class="validate" value="@Model.Email">
             <label for="emailAddress">Email Address</label>
         </div>
-        <div class="input-field col s6" style="padding-left:10px!important;">
+        <div class="input-field col s12 m6" style="padding-left:10px!important;">
             <input id="phoneNumber" type="text" class="validate" value="@Model.PhoneNumber">
             <label for="phoneNumber">Phone Number</label>
         </div>
