--- a/BookPoolV2/Views/Home/Product.cshtml
+++ b/BookPoolV2/Views/Home/Product.cshtml
@@ -121,13 +121,13 @@
                                 </div>
                             }
                         }
-                        <hr>
-                        <div class="row gotouserbooks" style="text-align: center; color: var(--primaryGrey);">
+                        @*<hr>*@
+                        @*<div class="row gotouserbooks" style="text-align: center; color: var(--primaryGrey);">
                             <i class="material-icons" style="font-size: 50px; width:100%;">streetview</i>
                             <span>All books for sale by:</span>
                             <span style="font-weight:bold;">@availableBook.OwnerUser</span>
                         </div>
-                        <hr style="display:none;" class="hiddenHR">
+                        <hr style="display:none;" class="hiddenHR">*@
                     </div>
                 </div>
             </div>
