--- a/BookPoolV2/Views/Home/MyBooks.cshtml
+++ b/BookPoolV2/Views/Home/MyBooks.cshtml
@@ -318,7 +318,7 @@
             }
             foreach (var book in myBooks)
             {
-                <div class="col s12 m12 l12">
+                <div class="col s12 m12 l12" style="padding:0px!important;">
                     @Html.Partial("_MyBook", book)
                     <hr />
                 </div>
