--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -244,8 +244,8 @@
 
         </nav>
         <nav id="searchBooksContainer" class="z-depth-0 titlenav" style="height:50px;">
-            <div class="nav-wrapper container" style="background:white; height:50px; padding-top:5px;">
-                <div class="row searchBar">
+            <div class="nav-wrapper container" style="background:white; height:50px; padding-top:5px; width:100%;">
+                <div id="searchBooksInnerContainer" class="row searchBar">
                     <div class="col s12 m12 l12" style="height:50px;">
                         <div class="sectionnav">
                             <div class="nav-wrapper">
