--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -53,21 +53,27 @@
             z-index: 2147483647 !important
         }
 
-        .media-buttons .btn:hover {
+        .media-buttons .facebook.btn:hover {
             background-color: #445c8e;
         }
 
+        .media-buttons .google.btn:hover {
+            background-color: #DE5246;
+        }
+
         .media-buttons .btn {
-            margin: 0 0.5rem 1rem;
+            margin: 0;
             display: inline-block;
+            font-size: 11px;
+            width: 100%;
         }
 
         .media-buttons button i {
-            float: left;
-            font-size: 19px;
-            width: 55px;
-            padding: 14px 15px;
-            border-right: 1px solid rgba(0,0,0,.2);
+            padding-right: 15px;
+        }
+
+        button.google {
+            background-color: #DE5246;
         }
 
         button.facebook {
@@ -207,7 +213,7 @@
             </div>
             <div id="messageFooterContainerRight">
                 <div style="width:100%; height:55px; padding-top:15px; vertical-align:middle; text-align:right;">
-                    <span style="color:white;">View Cart <i class="material-icons white-text" style="vertical-align:middle;">play_arrow</i></span>
+                    <span style="color:white;">View Cart <i class="material-icons white-text" style="vertical-align: middle; ">play_arrow</i></span>
                 </div>
             </div>
         </div>
