--- a/BookPoolV2/Views/Account/Register.cshtml
+++ b/BookPoolV2/Views/Account/Register.cshtml
@@ -3,12 +3,24 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<style>
+
+    #searchBooksContainer {
+        display: none;
+    }
+
+    #mainSearchBar{
+        height:60px!important;
+    }
+
+</style>
+
+@*<h2>@ViewBag.Title.</h2>*@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Register a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -37,5 +49,5 @@
 }
 
 @*@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}*@
+        @Scripts.Render("~/bundles/jqueryval")
+    }*@
